# voicelive_pro

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  SECURITY.md  VoiceLivePro.jucer  main.py  requirements.txt  run_web.py  test_asio_simple.py  vlpro_serializer_test.vlp
.github/workflows/: android.yml  ci.yml  desktop.yml
app/: CMakeLists.txt  README.md
app/src/: AndroidAudioOutput.cpp  AndroidAudioOutput.hpp  AndroidMicCapture.cpp  AndroidMicCapture.hpp  HeadphoneMonitor.cpp  HeadphoneMonitor.h  Main.cpp  MainComponent.cpp  MainComponent.h
ci/: debug.keystore
cmake/: CompilerWarnings.cmake  Sanitizers.cmake
core/: CMakeLists.txt
core/include/voicelive/core/: AudioParams.hpp  LooperTrack.hpp  Music.hpp  Project.hpp  ProjectSerializer.hpp  Result.hpp  Transport.hpp
core/src/: LooperTrack.cpp  Music.cpp  ProjectSerializer.cpp  Transport.cpp
core/tests/: .clang-tidy  test_audio_params.cpp  test_looper_track.cpp  test_main.cpp  test_music.cpp  test_project.cpp  test_project_serializer.cpp  test_transport.cpp  testing.hpp
data/presets/: preset_00.json
docs/: ARCHITECTURE.md  CONVENTIONS.md  DEBUG_MOBILE.md  DEVLOG.md
dsp/: CMakeLists.txt
dsp/include/voicelive/dsp/: BpmDetector.hpp  Chorus.hpp  Compressor.hpp  Delay.hpp  Distortion.hpp  Effect.hpp  EffectChain.hpp  Equalizer.hpp  Flanger.hpp  NoiseGate.hpp  Phaser.hpp  PitchDetector.hpp  Reverb.hpp  Tremolo.hpp  Wah.hpp
dsp/src/: BpmDetector.cpp  Chorus.cpp  Compressor.cpp  Delay.cpp  Distortion.cpp  EffectChain.cpp  Equalizer.cpp  Flanger.cpp  NoiseGate.cpp  Phaser.cpp  PitchDetector.cpp  Reverb.cpp  Tremolo.cpp  Wah.cpp
dsp/tests/: test_bpm_detector.cpp  test_chorus.cpp  test_compressor.cpp  test_delay.cpp  test_distortion.cpp  test_effect_chain.cpp  test_equalizer.cpp  test_flanger.cpp  test_noise_gate.cpp  test_phaser.cpp  test_pitch_detector.cpp  test_reverb.cpp  test_tremolo.cpp  test_wah.cpp
engine/: CMakeLists.txt
engine/include/voicelive/engine/: AudioDeviceHint.hpp  ChannelUtils.hpp  LoopAudio.hpp  LooperEngine.hpp  Metronome.hpp  Mixer.hpp  RingBuffer.hpp  SampleFifo.hpp  TrackProcessor.hpp  WavFile.hpp
engine/src/: AudioDeviceHint.cpp  ChannelUtils.cpp  LooperEngine.cpp  Metronome.cpp  Mixer.cpp  WavFile.cpp
engine/tests/: test_audio_device_hint.cpp  test_channel_utils.cpp  test_loop_audio.cpp  test_looper_engine.cpp  test_metronome.cpp  test_mixer.cpp  test_ring_buffer.cpp  test_sample_fifo.cpp  test_track_processor.cpp  test_wav_file.cpp
old/: README.md  gui_app.py
old/src/audio/: effects.py  engine.py  engine_optimized.py  looper.py  mastering_chain.py  project_manager.py
old/src/effects/guitar/: drive.py
old/src/effects/vocal/: hardtune.py  vocoder.py
old/src/web/static/: index.html
scripts/: check.sh  check_jucer.sh
src/audio/: looper_effect.py  metronome.py  tuner.py  undo_redo.py
src/effects/guitar/: chorus.py  compressor.py  flanger.py  wah.py
src/effects/vocal/: choir.py  doubling.py  harmony.py  reverb_pro.py
src/presets/: manager.py
src/presets/factory/: factory_presets.py
src/utils/: config.py  logger.py
src/web/: server.py
testing/: CMakeLists.txt
testing/include/voicelive_testing/: testing.hpp
tests/: test_architecture.py  test_complete_system.py  test_vocal_effects.py
